@@ -3,7 +3,7 @@
 
 # Python module src/gpodder/gpodder.py
 # Autogenerated from gpodder.glade
-# Generated on Fri Mar 31 18:11:13 2006
+# Generated on Fri Mar 31 18:26:27 2006
 
 # Warning: Do not modify any context comment such as #--
 # They are required to keep user's code
@@ -498,6 +498,12 @@ class Gpodder(SimpleGladeApp):
             downloadThread( current_podcast.url, filename, None, self.download_status_manager, current_podcast.title, current_channel, current_podcast, self.ldb).download()
         else:
             self.showMessage( _("You have already downloaded this episode\nor you are currently downloading it."))
+            # if we're not downloading it, but it exists: add to localdb (if not already done so)
+            if os.path.exists( filename) == True:
+                if libgpodder.isDebugging():
+                    print "already downloaded, trying to add to localDB if needed"
+                if current_channel.addDownloadedItem( current_podcast):
+                    self.ldb.clear_cache()
     #-- Gpodder.on_treeAvailable_row_activated }
 
     #-- Gpodder.on_btnDownload_clicked {
