@@ -3,7 +3,7 @@
 
 # Python module src/gpodder/gpodder.py
 # Autogenerated from gpodder.glade
-# Generated on Fri Mar 31 18:11:13 2006
+# Generated on Fri Mar 31 18:26:27 2006
 
 # Warning: Do not modify any context comment such as #--
 # They are required to keep user's code
