@@ -1,3 +1,8 @@
+Mon, 03 Apr 2006 21:40:39 +0200 <thp@perli.net>
+	* Retry adding item to localDB on new download attept when not
+	  yet added to localDB (helps when already downloaded "grey" item 
+	  in available list doesn't appear in "downloaded" list)
+
 Fri, 31 Mar 2006 18:13:16 +0200 <thp@perli.net>
 	* Major code clean-up in gpodder.py and other modules
 	* Updated strings in all source code + gladefile (for i18n)
